err/wsgidelegator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.0.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Compiling './lib/python3.5/site-packages/webob/byterange.py'...
***   File "./lib/python3.5/site-packages/webob/byterange.py", line 136
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/dec.py'...
***   File "./lib/python3.5/site-packages/webob/dec.py", line 148
    except webob.exc.HTTPException, resp:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/exc.py'...
***   File "./lib/python3.5/site-packages/webob/exc.py", line 639
    except HTTPException, exc:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/headers.py'...
***   File "./lib/python3.5/site-packages/webob/headers.py", line 77
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/multidict.py'...
***   File "./lib/python3.5/site-packages/webob/multidict.py", line 177
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/request.py'...
***   File "./lib/python3.5/site-packages/webob/request.py", line 903
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/response.py'...
***   File "./lib/python3.5/site-packages/webob/response.py", line 988
    lambda (k,v): k.lower() not in remove_headers,
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webob/util'...
Compiling './lib/python3.5/site-packages/webob/util/dictmixin.py'...
***   File "./lib/python3.5/site-packages/webob/util/dictmixin.py", line 56
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsgidelegator-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
